--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,9 +6,10 @@ html {
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 50px;
   text-align: center;
   color: white;
+  padding: 4px;
   font-family: 'Quicksand', sans-serif;
 }
 
